Rework datamodel with visits.